--- a/allennlp.ipynb
+++ b/allennlp.ipynb
@@ -31,7 +31,7 @@
       },
       "cell_type": "code",
       "source": [
-        ""
+        "!pip install allennlp"
       ],
       "execution_count": 0,
       "outputs": []
