--- a/allennlp.ipynb
+++ b/allennlp.ipynb
@@ -35,6 +35,29 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "GTc65wzlzySx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "1u9_lu8AzzNZ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "the shortcuts dont seem to work"
+      ]
     }
   ]
 }
